--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,33 @@
-[tool.poetry]
-name = "langchain-crash-course"
+[project]
+name = "langchain-chatbots-with-rag-agents-and-tools"
 version = "0.1.0"
-description = "Everything you need to know to get started with LangChain"
-authors = ["bhancock_ai <brandon@brandonhancock.io>"]
+description = "A project-based tutorial by HERE AND NOW AI showing how to build a Retrieval-Augmented Generation (RAG) chatbot with LangChain, complete with agents, memory, and chat interface integration."
+authors = [
+    {name = "HERE AND NOW AI", email = "info@hereandnowai.com"},
+]
+requires-python = ">=3.10.0,<3.12"
+dependencies = [
+    "langchain-openai>=0.1.8,<0.2.0",
+    "python-dotenv>=1.0.1,<2.0.0",
+    "langchain>=0.2.1,<0.3.0",
+    "langchain-community>=0.2.1,<0.3.0",
+    "langchain-anthropic>=0.1.15,<0.2.0",
+    "langchain-google-genai>=1.0.5,<2.0.0",
+    "langchain-google-firestore>=0.3.0,<0.4.0",
+    "firestore>=0.0.8,<0.1.0",
+    "chromadb>=0.5.0,<0.6.0",
+    "tiktoken>=0.7.0,<0.8.0",
+    "sentence-transformers>=3.0.0,<4.0.0",
+    "bs4>=0.0.2,<0.1.0",
+    "firecrawl-py>=0.0.13,<0.1.0",
+    "langchainhub>=0.1.18,<0.2.0",
+    "wikipedia>=1.4.0,<2.0.0",
+    "tavily-python>=0.3.3,<0.4.0",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10.0,<3.12"
-langchain-openai = "^0.1.8"
-python-dotenv = "^1.0.1"
-langchain = "^0.2.1"
-langchain-community = "^0.2.1"
-langchain-anthropic = "^0.1.15"
-langchain-google-genai = "^1.0.5"
-langchain-google-firestore = "^0.3.0"
-firestore = "^0.0.8"
-chromadb = "^0.5.0"
-tiktoken = "^0.7.0"
-sentence-transformers = "^3.0.0"
-bs4 = "^0.0.2"
-firecrawl-py = "^0.0.13"
-langchainhub = "^0.1.18"
-wikipedia = "^1.4.0"
-tavily-python = "^0.3.3"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
@@ -32,7 +38,3 @@ exclude = [".cache"]
 # https://beta.ruff.rs/docs/configuration/
 select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
 ignore = ['W291', 'W292', 'W293']
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
